// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`framework defaults should handle factory function as default value 1`] = `
<div>
  {"bar":"baz"}
</div>
`;

exports[`framework defaults should handle function prop correctly 1`] = `
<div>
  this should be visible
</div>
`;

exports[`framework defaults should use component default if global not defined 1`] = `
<div>
  goodbye world
</div>
`;

exports[`framework defaults should use global default if defined 1`] = `
<div>
  hello world
</div>
`;

exports[`framework defaults should use runtime value if defined 1`] = `
<div>
  baz
</div>
`;
